--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>home</title>
     <meta name="viewport:" content="width=device-width, initial-sale=1.0">
     <link rel="shortcut icon" type="image/x-icon"
-    href="billeder/dark-grey-50px-png.ico" />
+    href="images/dark-grey-50px-png.ico" />
     <link rel="stylesheet" type="text/css" href="home.css"
   </head>
   <body>
@@ -14,7 +14,7 @@
         </div>
         <div class="divlogo">
           <a href="home.html" class="logo1">
-            <img src="billeder/chalk1-50px-png.png"
+            <img src="images/chalk1-50px-png.png"
             alt="min hjemmeside.html logo" /></a>
         </div>
       </div>
