--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport:" content="width=device-width, initial-sale=1.0">
     <link rel="shortcut icon" type="image/x-icon"
     href="images/dark-grey-50px-png.ico" />
-    <link rel="stylesheet" type="text/css" href="home.css"
+    <link rel="stylesheet" type="text/css" href="index.css"
   </head>
   <body>
       <div class="div0">
         <div class="div1">
         </div>
         <div class="divlogo">
-          <a href="home.html" class="logo1">
+          <a href="index.html" class="logo1">
             <img src="images/chalk1-50px-png.png"
             alt="min hjemmeside.html logo" /></a>
         </div>
       </div>
       <div class="div2">
-        <p> <a href="home.html" class="home">HOME</a></p>
+        <p> <a href="index.html" class="home">HOME</a></p>
         <p> <a href="idk.html" class="idk">IDK</a></p>
         <p> <a href="store.html" class="store">STORE</a></p>
         <p> <a href="about.html" class="about">ABOUT</a></p>
