--- a/store.html
+++ b/store.html
@@ -13,13 +13,13 @@
         <div class="div1">
         </div>
         <div class="divlogo">
-          <a href="home.html" class="logo1">
+          <a href="index.html" class="logo1">
             <img src="images/chalk1-50px-png.png"
             alt="min hjemmeside.html logo" /></a>
         </div>
       </div>
       <div class="div2">
-        <p> <a href="home.html" class="home">HOME</a></p>
+        <p> <a href="index.html" class="home">HOME</a></p>
         <p> <a href="idk.html" class="idk">IDK</a></p>
         <p> <a href="store.html" class="store">STORE</a></p>
         <p> <a href="about.html" class="about">ABOUT</a></p>
