--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="divlogo">
           <a href="index.html" class="logo1">
-            <img src="images/black-white-round-50px.png"
+            <img src="images/black-white-50px.png"
             alt="min hjemmeside.html logo" /></a>
         </div>
       </div>
