--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>home</title>
+    <title>Rasmus Helbo</title>
     <meta name="viewport:" content="width=device-width, initial-sale=1.0">
     <link rel="shortcut icon" type="image/x-icon"
-    href="images/dark-grey-50px-png.ico" />
+    href="images/black-white-50px.ico" />
     <link rel="stylesheet" type="text/css" href="index.css"
   </head>
   <body>
