--- a/store.html
+++ b/store.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>store</title>
+    <title>Store - Rasmus Helbo</title>
     <meta name="viewport:" content="width=device-width, initial-sale=1.0">
     <link rel="shortcut icon" type="image/x-icon"
-    href="images/dark-grey-50px-png.ico" />
+    href="images/black-white-50px.ico" />
     <link rel="stylesheet" type="text/css" href="store.css"
   </head>
   <body>
@@ -14,7 +14,7 @@
         </div>
         <div class="divlogo">
           <a href="index.html" class="logo1">
-            <img src="images/chalk1-50px-png.png"
+            <img src="images/black-white-50px.png"
             alt="min hjemmeside.html logo" /></a>
         </div>
       </div>
